# NEWorld

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Makefile  NEWorld.sln  NEWorld.vcxproj  NEWorld.vcxproj.filters  README.md  SIGNOFF  appveyor.yml  b9  circle.yml  rebuild_progress.txt  roadmap.md  theseus.md
release/: .gitignore  CMakeLists.txt  NEWorld.sh  imgui.ini  settings.json  settings_client.json  settings_server.json
release/plugins/: CMakeLists.txt
release/res/langs/: zh_CN.lang
src/: CMakeLists.txt  ChunkPacket.h  ChunkPtrArray.h  GameView.cpp  NEWorld.cpp  Object.h  PlayerPacket.h  World.cpp  World.h  WorldRenderer.cpp  WorldRenderer.h  check.py
src/NEWorldLauncher/: NEWorldLauncher.cpp  main.cpp
src/PluginSDK/: defs.h  export_variables.cpp  export_variables.h  pluginsdk.cpp
src/WindowsLauncher/: DebugForm.Designer.cs  DebugForm.cs  Def.cs  Game.cs  Launcher.cs  MainForm.Designer.cs  MainForm.cs  MainForm.resx  NEWorldLauncher.csproj  NEWorldLauncher.sln  Program.cs  Stat.cs  app.config
src/WindowsLauncher/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
src/api/cpp/: pluginapi.cpp  pluginapi.h
src/api/freebasic/: pluginapi.bi
src/backends/sdlgl/: sdlgl.cpp  sdlgl.hpp
src/client/: AudioSystem.cpp  AudioSystem.h  CMakeLists.txt  Controls.cpp  Controls.h  Foundation.h  GLProc.cpp  GLProc.h  GUI.cpp  GUI.h  GameView.cpp  Globalization.h  Grafics.cpp  Grafics.h  Menus.cpp  Menus.h  NEWorld.cpp  Particles.h  Player.cpp  Renderer.cpp  Setup.cpp  Shader.cpp  TextRenderer.cpp  Textures.h  World.cpp  WorldRenderer.cpp  blockrenderer.cpp  blockrenderer.h  chunk.cpp  chunk.h  chunkclient.cpp  chunkclient.h  chunkrenderer.cpp  chunkrenderer.h  clientapi.cpp  clientgameconnection.cpp  game.cpp  game.h  gameconnection.cpp  gameconnection.h  (+63 more)
src/client/Audio/: AL-EFX.cpp  AL-EFX.h  ALDevice.cpp  ALDevice.h  AudioSystem.cpp  AudioSystem.h  CWaves.cpp  CWaves.h  Framework.cpp  Framework.h  aldlist.cpp  aldlist.h
src/client/GUI/: application.cpp  application.h  controls.cpp  controls.h  graphics.cpp  graphics.h  gui.h  textrenderer.cpp  textrenderer.h  window.cpp  window.h
src/client/hogui/: hogui.h
src/client/imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_draw.cpp  stb_textedit.h  stb_truetype.h
src/client/renderer/: blockrenderer.h  chunkrenderer.cpp  chunkrenderer.h
src/common/: CMakeLists.txt  aabb.h  blockdata.h  blockmanager.cpp  blockmanager.h  blocktype.h  command.h  common.h  consolecolor.h  debug.h  filesystem.h  library.h  logger.cpp  logger.h  object.h  playerobject.h  plugin.cpp  plugin.h  pluginapi.cpp  pluginapi.h  pluginmanager.cpp  pluginmanager.h  ratemeter.h  scheduler.h  stringutils.h  utils.cpp  utils.h  vec3.h
src/engine/concurrency/: nwconcurrency.hpp
src/engine/maintenance/: nwdebug.h
src/engine/nwmath/: nwvector.h
src/game/: flatfactory.h
src/game/api/: nwpluginapi.cpp
src/game/context/: nwcontext.hpp
src/game/network/: clientgameconnection.cpp  clientgameconnection.h  gameconnection.cpp  mainserver.cpp  network.cpp  network.h  networkmanager.cpp
src/game/plugin/: plugin.h
src/game/renderer/: renderer.cpp  texture.h
src/game/world/: nwchunk.h  nwplayer.hpp  object.h  worldclient.h
src/launcher/: CMakeLists.txt  main.cpp
src/launchers/: client.cpp
src/main/: CMakeLists.txt  entry.cpp
src/main/client/: entry.cpp
src/main/server/: entry.cpp  worldgen.cpp  worldgen.h
src/main/shared/: shared.cpp  shared.h
src/maximilian/include/: RtAudio.h  maximilian.h
src/maximilian/src/: RtAudio.cpp  maximilian.cpp  stb_vorbis.c
src/neworld/: CMakeLists.txt  blockrenderer.cpp  chunkclient.cpp  chunkpointerarray.h  game.cpp  main.cpp  mat4.h  neworld.cpp  neworld.h  vertexarray.h  window.cpp  worldclient.cpp
src/neworldlauncher/: CMakeLists.txt
src/neworldserver/: main.cpp
src/nwcore/: CMakeLists.txt  command.h  common.h  consolecolor.h  debug.h  event.cpp  event.h  flatfactory.h  json.hpp  jsonhelper.h  library.h  nwblock.h  nwexception.hpp  nwexport.h  nwsafety.cpp  nwsafety.hpp  nwstring.hpp  object.h  playerobject.h  plugin.cpp  plugin.h  pluginmanager.cpp  pluginmanager.h  utils.h  world.cpp  world.h
src/nwcore/api/: nwapi.h  nwpluginapi.cpp  nwpluginapi.h
src/nwcore/common/: aabb.h  common.h  debug.h  filesys.h  jsonhelper.h  library.h  nwconcepts.hpp  nwconsole.hpp  nwmath.hpp  nwsafety.cpp  nwsafety.hpp  nwvector.h  utils.h  vec3.h
src/nwcore/extream/: nwvector.hpp
src/nwcore/game/: nwgame.cpp  nwgame.hpp
src/nwcore/network/: gameconnections.hpp
src/nwcore/plugin/: plugin.cpp  plugin.h  pluginmanager.cpp  pluginmanager.h
src/nwcore/world/: nwblock.cpp  nwblock.h  nwchunk.cpp  nwchunk.h  object.h  (+4 more)
src/plugin/: CMakeLists.txt
src/pluginapi/: pluginapi.cpp  pluginapi.h
src/precomp/: precomp1.cpp  precomp2.cpp
src/protocol/: .gitignore  make_fb.py
src/server/: CMakeLists.txt  Console.cpp  Console.h  Main.cpp  NEWorldServer.cpp  Network.cpp  Network.h  builtincommands.cpp  chunk.cpp  chunk.h  chunkloader.cpp  chunkloader.h  chunkserver.cpp  chunkserver.h  commandcontroller.cpp  commandcontroller.h  commandmanager.cpp  commandmanager.h  connection.cpp  connection.h  gameconnection.cpp  gameconnection.h  gateway.cpp  gateway.h  main.cpp  mainserver.cpp  multiplayerconnection.cpp  networkmanager.cpp  networkmanager.h  networkstructures.cpp  networkutils.cpp  playermanager.h  raknet.cpp  raknet.h  server.cpp  server.h  serverapi.cpp  serverapi.h  servercommand.cpp  servercommand.h  (+9 more)
src/shared/: BlockFuncs.h  Blocks.h  CMakeLists.txt  Chunk.cpp  Chunk.h  ChunkPtrArray.cpp  ChunkPtrArray.h  Common.h  Definitions.h  Frustum.cpp  Frustum.h  FunctionsKit.cpp  GameView.cpp  HeightMap.cpp  HeightMap.h  Hitbox.cpp  Hitbox.h  Items.cpp  Items.h  Network.h  Object.h  OnlinePlayer.cpp  OnlinePlayer.h  Player.h  RandGen.h  Shared.h  World.cpp  WorldGen.h  WorldUpdate.cpp  WorldUpdate.h  aabb.cpp  aabb.h  base.h  block.h  blockdata.cpp  blockdata.h  blockmanager.cpp  blockmanager.h  blocktype.cpp  blocktype.h  (+67 more)
src/test/: tests.cpp
src/uilib/: CMakeLists.txt
(+329 files in other folders)
