project(Core)
aux_source_directory(${SOURCE_DIR}/nwcore SRC_CORE)
aux_source_directory(${SOURCE_DIR}/nwcore/api SRC_CORE)
aux_source_directory(${SOURCE_DIR}/nwcore/world SRC_CORE)
aux_source_directory(${SOURCE_DIR}/nwcore/plugin SRC_CORE)
aux_source_directory(${SOURCE_DIR}/nwcore/common SRC_CORE)
add_library(nwcore SHARED ${SRC_CORE})
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -DNWCOREEXPORTS)
target_include_directories(nwcore PUBLIC ${SOURCE_DIR}/nwcore PUBLIC)
target_include_directories(nwcore PUBLIC ${SOURCE_DIR}/shared PUBLIC)